@@ -95,7 +95,8 @@ class UnitedStates(HolidayBase):
             name = "Martin Luther King Jr. Day"
             if self.state == 'AL':
                 name = "Robert E. Lee/Martin Luther King Birthday"
-            elif (self.state == 'MS') or ((self.state == 'AR') and (year <= 2017)):
+            elif (self.state == 'MS') or ((self.state == 'AR') and
+                                          (year <= 2017)):
                 name = ("Dr. Martin Luther King Jr. "
                         "and Robert E. Lee's Birthdays")
             elif self.state in ('AZ', 'NH'):
