@@ -9,6 +9,7 @@ Released ????? ??, ????
 - Netherlands fix (RooieRakkert)
 - Switzerland fixes (cgrigis)
 - Added korean_cal attribute to Korea and Vietnam (seriousran, pelennor)
+- United States fixes (patrick-nicholson, dr-p)
 
 
 Version 0.10.2
